added view items at location

--- a/donation-tracker/Base.lproj/Main.storyboard
+++ b/donation-tracker/Base.lproj/Main.storyboard
@@ -705,23 +705,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="View Items" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoT-dr-q0h">
-                                <rect key="frame" x="119" y="142" width="137" height="26"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="View Items" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoT-dr-q0h">
+                                <rect key="frame" x="119" y="48" width="137" height="25.5"/>
                                 <fontDescription key="fontDescription" name="HoeflerText-Black" family="Hoefler Text" pointSize="25"/>
                                 <color key="textColor" red="0.9327524304" green="0.43942439789999999" blue="0.61643615470000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                                 <color key="shadowColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
                                 <size key="shadowOffset" width="0.0" height="0.0"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z0i-Ef-fqK">
+                                <rect key="frame" x="7" y="118" width="361" height="480"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="DonationItemCell" id="ArM-Tj-esX" customClass="DonationItemCell" customModule="donation_tracker" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="361" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ArM-Tj-esX" id="27o-KR-HEq">
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XwH-ue-yUc">
+                                                    <rect key="frame" x="15" y="13" width="280" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="XwH-ue-yUc" firstAttribute="top" secondItem="27o-KR-HEq" secondAttribute="topMargin" constant="2" id="emw-uZ-FYY"/>
+                                                <constraint firstItem="XwH-ue-yUc" firstAttribute="bottom" secondItem="27o-KR-HEq" secondAttribute="bottomMargin" constant="2" id="mQ4-ZX-HXn"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XwH-ue-yUc" secondAttribute="trailing" constant="33" id="wY5-gE-4oT"/>
+                                                <constraint firstItem="XwH-ue-yUc" firstAttribute="leading" secondItem="27o-KR-HEq" secondAttribute="leadingMargin" id="zOU-z9-dl2"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="itemNameTxt" destination="XwH-ue-yUc" id="YXL-Tq-B3y"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="U2e-Ol-oiy" firstAttribute="trailing" secondItem="Z0i-Ef-fqK" secondAttribute="trailing" constant="7" id="0xU-BI-zms"/>
+                            <constraint firstItem="Z0i-Ef-fqK" firstAttribute="top" secondItem="aoT-dr-q0h" secondAttribute="bottom" constant="44.5" id="38S-wy-DpQ"/>
+                            <constraint firstItem="aoT-dr-q0h" firstAttribute="leading" secondItem="U2e-Ol-oiy" secondAttribute="leading" constant="119" id="JbA-rQ-Y56"/>
+                            <constraint firstItem="U2e-Ol-oiy" firstAttribute="trailing" secondItem="aoT-dr-q0h" secondAttribute="trailing" constant="119" id="KAw-Ug-P8T"/>
+                            <constraint firstItem="Z0i-Ef-fqK" firstAttribute="leading" secondItem="U2e-Ol-oiy" secondAttribute="leading" constant="7" id="QCh-Jd-t0x"/>
+                            <constraint firstItem="U2e-Ol-oiy" firstAttribute="bottom" secondItem="Z0i-Ef-fqK" secondAttribute="bottom" constant="69" id="f7J-5w-tDy"/>
+                            <constraint firstItem="aoT-dr-q0h" firstAttribute="top" secondItem="U2e-Ol-oiy" secondAttribute="top" constant="28" id="fvq-Xk-wJe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="U2e-Ol-oiy"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="Z0i-Ef-fqK" id="grm-c5-jlP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cdL-GW-QH5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4182" y="170"/>
+            <point key="canvasLocation" x="4181.6000000000004" y="169.56521739130437"/>
         </scene>
     </scenes>
     <resources>
