--- a/donation-tracker/Base.lproj/Main.storyboard
+++ b/donation-tracker/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dt-ios" translatesAutoresizingMaskIntoConstraints="NO" id="mu6-am-fLz">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B7j-SM-a7M" customClass="MyButton" customModule="donation_tracker" customModuleProvider="target">
                                 <rect key="frame" x="76" y="332" width="222" height="60"/>
@@ -51,7 +51,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Donation Tracker" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLF-ml-oIL">
-                                <rect key="frame" x="65" y="225" width="244" height="25.5"/>
+                                <rect key="frame" x="65" y="181" width="244" height="69.5"/>
                                 <fontDescription key="fontDescription" name="HoeflerText-Black" family="Hoefler Text" pointSize="25"/>
                                 <color key="textColor" red="0.9327524304" green="0.43942439789999999" blue="0.61643615470000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -395,9 +395,16 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of attempts: 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNc-AJ-vQe">
+                                <rect key="frame" x="111" y="471" width="153.5" height="16"/>
+                                <fontDescription key="fontDescription" name="HoeflerText-Regular" family="Hoefler Text" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="fNc-AJ-vQe" firstAttribute="centerX" secondItem="30X-4w-tJa" secondAttribute="centerX" id="9iO-7F-Jdt"/>
                             <constraint firstItem="6fL-IR-LmC" firstAttribute="top" secondItem="43C-oS-ByH" secondAttribute="bottom" constant="50" id="B2H-yJ-RGK"/>
                             <constraint firstItem="6fL-IR-LmC" firstAttribute="centerX" secondItem="30X-4w-tJa" secondAttribute="centerX" id="WHG-af-G6M"/>
                             <constraint firstItem="qOZ-No-atH" firstAttribute="top" secondItem="6fL-IR-LmC" secondAttribute="bottom" constant="50" id="ZGS-V7-ow9"/>
@@ -406,12 +413,15 @@
                             <constraint firstItem="LzP-NC-Xjl" firstAttribute="trailing" secondItem="43C-oS-ByH" secondAttribute="trailing" constant="66" id="isR-LE-tUD"/>
                             <constraint firstItem="qYM-BP-ZUH" firstAttribute="top" secondItem="qOZ-No-atH" secondAttribute="bottom" id="nit-ns-vAV"/>
                             <constraint firstItem="qOZ-No-atH" firstAttribute="centerX" secondItem="30X-4w-tJa" secondAttribute="centerX" id="oqr-8K-d4v"/>
+                            <constraint firstItem="LzP-NC-Xjl" firstAttribute="bottom" secondItem="fNc-AJ-vQe" secondAttribute="bottom" constant="180" id="sTS-N4-ggj"/>
                             <constraint firstItem="43C-oS-ByH" firstAttribute="leading" secondItem="LzP-NC-Xjl" secondAttribute="leading" constant="65" id="sxz-pZ-ZZp"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="LzP-NC-Xjl"/>
                     </view>
                     <connections>
+                        <outlet property="SignInBtn" destination="qOZ-No-atH" id="gV3-x4-ckR"/>
                         <outlet property="emailTxt" destination="Ksf-8g-cZO" id="HgQ-Vb-gwK"/>
+                        <outlet property="numberOfAttemptsTxt" destination="fNc-AJ-vQe" id="sRq-Rg-eLV"/>
                         <outlet property="passwordTxt" destination="Dn1-4r-77V" id="HTn-Td-ge9"/>
                         <segue destination="5pz-9j-sLz" kind="show" identifier="toCreateAccount" id="Zos-x8-zDF"/>
                         <segue destination="sZ1-i7-iS3" kind="show" identifier="loginToEmployeeDashBoard" id="vAy-J4-m5w"/>
@@ -523,20 +533,123 @@
             </objects>
             <point key="canvasLocation" x="3137" y="537"/>
         </scene>
-        <!--View Controller-->
+        <!--Search ItemVC-->
         <scene sceneID="6Hh-sc-fS2">
             <objects>
-                <viewController id="pxZ-GT-Axq" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Egu-mH-N0x">
+                <viewController id="pxZ-GT-Axq" customClass="SearchItemVC" customModule="donation_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Egu-mH-N0x" customClass="GradientView" customModule="donation_tracker" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="4om-YB-HAV">
+                                <rect key="frame" x="62.5" y="165" width="250" height="156"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter search text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lcm-1b-Xik">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="h3k-lS-x7B"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                                <color key="value" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e4V-4H-pjQ">
+                                        <rect key="frame" x="0.0" y="34" width="250" height="2"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="b3T-kS-UmN"/>
+                                            <constraint firstAttribute="height" constant="2" id="jhX-J8-W8N"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5s-oH-RC8">
+                                        <rect key="frame" x="0.0" y="50" width="118" height="30"/>
+                                        <state key="normal" title="Select a Location">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="chooseLocationBtnPressed:" destination="pxZ-GT-Axq" eventType="touchUpInside" id="KyI-l8-SPx"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="24s-zd-rh4">
+                                        <rect key="frame" x="0.0" y="94" width="250" height="2"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="Jn6-sf-uo5"/>
+                                            <constraint firstAttribute="width" constant="250" id="S0G-jJ-50x"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8KY-q5-uB6">
+                                        <rect key="frame" x="0.0" y="110" width="123" height="30"/>
+                                        <state key="normal" title="Select a Category">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="chooseCategoryBtnPressed:" destination="pxZ-GT-Axq" eventType="touchUpInside" id="NxH-fh-46l"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iFo-4q-hXj">
+                                        <rect key="frame" x="0.0" y="154" width="250" height="2"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="wA6-Jv-9iw"/>
+                                            <constraint firstAttribute="width" constant="250" id="yLp-1a-r1N"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search Item" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ta0-Vn-SkL">
+                                <rect key="frame" x="114" y="59" width="147.5" height="25.5"/>
+                                <fontDescription key="fontDescription" name="HoeflerText-Black" family="Hoefler Text" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="highlightedColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                                <color key="shadowColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0gt-DO-3eZ" customClass="MyButton" customModule="donation_tracker" customModuleProvider="target">
+                                <rect key="frame" x="62.5" y="410" width="250" height="50"/>
+                                <color key="backgroundColor" red="0.9327524304" green="0.43942439789999999" blue="0.61643615470000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="3no-Ur-R5c"/>
+                                    <constraint firstAttribute="height" constant="50" id="QY8-rD-Uon"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Search">
+                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="rounded" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="createAcctBtnPressed:" destination="5pz-9j-sLz" eventType="touchUpInside" id="mu0-wB-G6N"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0gt-DO-3eZ" firstAttribute="centerX" secondItem="Egu-mH-N0x" secondAttribute="centerX" id="K4a-2T-1ms"/>
+                            <constraint firstItem="07k-Tb-0Wr" firstAttribute="bottom" secondItem="0gt-DO-3eZ" secondAttribute="bottom" constant="163" id="SZ3-HM-uEf"/>
+                            <constraint firstItem="4om-YB-HAV" firstAttribute="top" secondItem="ta0-Vn-SkL" secondAttribute="bottom" constant="80.5" id="Xz5-7F-fsv"/>
+                            <constraint firstItem="4om-YB-HAV" firstAttribute="centerX" secondItem="Egu-mH-N0x" secondAttribute="centerX" id="oYJ-Lw-L2w"/>
+                            <constraint firstItem="ta0-Vn-SkL" firstAttribute="top" secondItem="07k-Tb-0Wr" secondAttribute="top" constant="39" id="qfA-hJ-3zF"/>
+                            <constraint firstItem="ta0-Vn-SkL" firstAttribute="centerX" secondItem="Egu-mH-N0x" secondAttribute="centerX" id="uGZ-Cv-1oJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="07k-Tb-0Wr"/>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="categoryBtn" destination="8KY-q5-uB6" id="cdW-kg-ZhY"/>
+                        <outlet property="locationBtn" destination="R5s-oH-RC8" id="htS-pL-s05"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kOq-b5-TzR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2514" y="1417"/>
+            <point key="canvasLocation" x="2512.8000000000002" y="1416.3418290854574"/>
         </scene>
         <!--Location-->
         <scene sceneID="5Jy-wb-MrQ">
@@ -574,7 +687,7 @@
         <scene sceneID="JxF-VU-HLU">
             <objects>
                 <viewController id="0hH-Y3-UvB" customClass="LocationPresenterVC" customModule="donation_tracker" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YkV-bT-O22">
+                    <view key="view" contentMode="scaleToFill" id="YkV-bT-O22" customClass="GradientView" customModule="donation_tracker" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -1019,7 +1132,7 @@
         <scene sceneID="cjY-Bu-X7a">
             <objects>
                 <viewController id="UaQ-hT-MvI" customClass="ItemPresenterVC" customModule="donation_tracker" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="d7l-Ea-13G">
+                    <view key="view" contentMode="scaleToFill" id="d7l-Ea-13G" customClass="GradientView" customModule="donation_tracker" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -1080,6 +1193,6 @@
         <segue reference="vAy-J4-m5w"/>
         <segue reference="zrt-pg-DxA"/>
         <segue reference="Zos-x8-zDF"/>
-        <segue reference="8tE-tc-wry"/>
+        <segue reference="ExD-kx-Jsu"/>
     </inferredMetricsTieBreakers>
 </document>
